[gd_scene load_steps=16 format=3 uid="uid://d0wrlwbpbvbjo"]

[ext_resource type="Script" path="res://Scenes/Telematics/right_teleporter.gd" id="1_uokx0"]
[ext_resource type="Texture2D" uid="uid://bsgq72h2df1nk" path="res://Assets/Telepads/Off/IMG_003.png" id="2_b15v6"]
[ext_resource type="Texture2D" uid="uid://ds3s3whjasgnl" path="res://Assets/Telepads/On/IMG_003.png" id="3_usp2m"]
[ext_resource type="Texture2D" uid="uid://wegdy7houoef" path="res://Assets/Pics/telelight.png" id="4_44lsu"]
[ext_resource type="AudioStream" uid="uid://b3i6nb7l3csm2" path="res://Assets/Audio/Sounds/teleport.ogg" id="4_b27a4"]
[ext_resource type="AudioStream" uid="uid://b4ofy45gk1pki" path="res://Assets/Audio/Sounds/telesizzle.ogg" id="5_sa5iq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80fcm"]
size = Vector2(2, 2)

[sub_resource type="SpriteFrames" id="SpriteFrames_lyrud"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_b15v6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_rv2xy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_usp2m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ntmwt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_44lsu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_jcch5"]
resource_name = "bottom"

[sub_resource type="Animation" id="Animation_pubcl"]
resource_name = "left"

[sub_resource type="Animation" id="Animation_1ljth"]
resource_name = "right"

[sub_resource type="Animation" id="Animation_qytrt"]
resource_name = "top"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q6ks2"]
_data = {
"bottom": SubResource("Animation_jcch5"),
"left": SubResource("Animation_pubcl"),
"right": SubResource("Animation_1ljth"),
"top": SubResource("Animation_qytrt")
}

[node name="Right_Teleporter" type="Area2D"]
collision_mask = 2
script = ExtResource("1_uokx0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-15, 0)
shape = SubResource("RectangleShape2D_80fcm")

[node name="Right" type="Node2D" parent="."]

[node name="Off_Right" type="AnimatedSprite2D" parent="Right"]
sprite_frames = SubResource("SpriteFrames_lyrud")

[node name="On_Right" type="AnimatedSprite2D" parent="Right"]
sprite_frames = SubResource("SpriteFrames_rv2xy")

[node name="Telelight" type="AnimatedSprite2D" parent="Right"]
modulate = Color(1, 1, 1, 0)
rotation = 4.71239
sprite_frames = SubResource("SpriteFrames_ntmwt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q6ks2")
}

[node name="Teleport" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_b27a4")
volume_db = -10.0

[node name="Telesizzle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_sa5iq")
volume_db = -15.0

[node name="TimerTeleport" type="Timer" parent="."]
wait_time = 0.3

[node name="TimerTeleport2" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="TimerTeleport" to="." method="teleport"]
[connection signal="timeout" from="TimerTeleport2" to="." method="_on_timer_teleport_2_timeout"]
